--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "star-wars",
   "version": "0.1.0",
+  "homepage": "https://bazza6.github.io/Star-Wars-API",
+
   "private": true,
   "dependencies": {
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +14,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
